--- a/vistas/layout.html
+++ b/vistas/layout.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="es">
 	<head>
+		<!--cambio importante-->
+		
 		<meta charset="utf-8"/>
 		<title>Blog</title>
 		<link rel="stylesheet" href="css/normalize.css"/>
