--- a/vistas/layout.html
+++ b/vistas/layout.html
@@ -2,7 +2,7 @@
 <html lang="es">
 	<head>
 		<!--cambio importante-->
-		
+		<!--cambio que hice en mi casa-->
 		<meta charset="utf-8"/>
 		<title>Blog</title>
 		<link rel="stylesheet" href="css/normalize.css"/>
